# bt-web-report-manager

./: .gitignore  Makefile  README.md  bt-web-report Manager.spec  pyproject.toml  release-notes.md
docs/: notarization-preflight.md  release-checklist.md
resources/: icon.icns
scripts/: build-app.sh  install-app.sh  setup_slice5_manual_test.py  setup_slice6_manual_test.py
src/bt_web_report_manager/: __main__.py  app.py  commands.py  deletion.py  git_status.py  image_processing.py  locks.py  models.py  new_project.py  platform_yaml.py  project_variables.py  projects.py  settings.py  support.py  trace.py  update_installer.py  updates.py
src/bt_web_report_manager/ui/: __init__.py  command_feedback.py  command_runner.py  dialogs.py  helpers.py  image_processor.py  main.py  main_window.py  new_project.py  preview.py  project_variables.py  runner.py  state.py  theme.py  update_worker.py  updates.py
tests/: conftest.py  test_app.py  test_command_feedback.py  test_command_runner.py  test_commands.py  test_deletion.py  test_image_processor.py  test_locks.py  test_main_window_locks.py  test_main_window_status_tab.py  test_new_project.py  test_new_project_wizard.py  test_packaging.py  test_preview_helpers.py  test_project_discovery.py  test_project_variables.py  test_settings.py  test_support.py  test_ui_dialogs.py  test_ui_helpers.py  test_ui_lock_flow.py  test_update_installer.py  test_updates.py
